dark mode fix

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -182,8 +182,8 @@ span.colorText-green {
   top: 0;
   width: 40px;
   height: 44px;
-  opacity: 1;
   z-index: 10;
+  opacity: 1;
 }
 
 .switcher:before {
@@ -198,11 +198,13 @@ span.colorText-green {
   right: 0;
   position: absolute;
   transition: all 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
-  opacity: 0;
 }
 
-input:checked + .switcher:before {
-  opacity: 1;
+body.bg-white .switcher:before{
+  opacity: 0
+}
+body.bg-black .switcher:before{
+  opacity: 1
 }
 
 .icon {
